# betfair_stream_app

./: .env.example  .gitignore  AGENTS.md  CONTINUITY.md  Cargo.toml  README.md  build.rs  tauri.conf.json
.github/workflows/: ci.yml  release.yml
assets/: icon.icns  icon.iconsproj  index.html
docs/: ARCHITECTURE.md  BETFAIR_RPC_GATEWAY.md  ExchangeStreamAPI-March2018.txt  TAURI_MIGRATION.md
installer/windows/: product.wxs
scripts/: app-config.sh  macos-bundle.sh  macos-dmg.sh  release.sh
src/: app.rs  codec.rs  config.rs  error.rs  gui.rs  lib.rs  main.rs  state.rs  upstream.rs
src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs  ui_error.rs
src-tauri/src/betfair/: rpc.rs
src-tauri/src/commands/: stream.rs
src/betfair/: identity.rs  mod.rs  rpc.rs
src/commands/: account.rs  auth.rs  mod.rs  rpc.rs  stream.rs
src/stream/: mod.rs
src/variants/: gui_tray.rs  mod.rs  windows_service.rs
ui/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.css  App.tsx  main.tsx
ui/src/app/: AppProviders.tsx  AppShell.tsx  AuthGate.tsx  useAppModel.ts
ui/src/errors/: UiError.ts
ui/src/features/auth/: LoginController.tsx  LoginView.tsx
ui/src/features/markets/: MarketList.tsx  MarketTable.tsx  MarketsView.tsx
ui/src/features/markets/cells/: LtpCell.tsx  PriceAmountCell.tsx
ui/src/features/settings/: LanguageSelect.tsx  SettingsPanel.tsx  ThemeModeToggle.tsx
ui/src/hooks/: accountContext.tsx  marketsContext.tsx  navigationContext.tsx  notificationsContext.tsx  ordersContext.tsx  selectedMarketContext.tsx  sessionContext.tsx  useAppSnackbar.ts  useClearedOrders.ts  useFunds.ts  useMarketProfitAndLoss.ts  useMarketStream.ts  useMarkets.ts  useSession.ts
ui/src/i18n/: index.ts
ui/src/i18n/locales/en/: auth.json  common.json  errors.json  markets.json  settings.json
ui/src/i18n/locales/es/: auth.json  common.json  errors.json  markets.json  settings.json
ui/src/i18n/locales/ru/: auth.json  common.json  errors.json  markets.json  settings.json
ui/src/lib/: betfair.ts  format.ts  price.ts  queries.ts  storage.ts  stream.ts  streamClient.ts  streamClientTauri.ts  streamState.ts  tauri.ts
ui/src/lib/betfair/: account.ts  betting.ts  errors.ts  index.ts  invoke.ts
ui/src/lib/betfair/api/: account.ts  betting.ts
ui/src/lib/betfair/types/: account.ts  betting.ts  common.ts  stream.ts
ui/src/pages/: AccountStatementPage.tsx  MainPage.tsx  OrdersPage.tsx  Router.ts  SettingsPage.tsx
ui/src/theme/: ColorModeProvider.tsx  colors.ts  createAppTheme.ts
ui/src/types/: betfair.ts
