[package]
name = "betfair_stream_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["trace"] }

bytes = "1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }

rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# For DNS name parsing for rustls ServerName
rustls-pki-types = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
