[package]
name = "betfair_stream_proxy"
version = "1.0.11"
edition = "2021"

[package.metadata.app]
# Human-friendly name (can contain spaces) used for macOS .app, DMG volume name,
# and installer display strings. Cargo package name must remain an identifier.
display_name = "Betfair Stream API Proxy"
bundle_id = "com.savostin.betfair-stream-proxy"
dmg_volume_name = "Betfair Stream API Proxy"
windows_product_name = "Betfair Stream API Proxy"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tower-http = { version = "0.6", features = ["trace"] }

bytes = "1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }

rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# For DNS name parsing for rustls ServerName
rustls-pki-types = "1"

# Optional GUI (tray icon + Exit menu)
tray-icon = { version = "0.19", optional = true }
tao = { version = "0.30", optional = true }
ico = { version = "0.4", optional = true }
rfd = { version = "0.15", optional = true, default-features = true }

[features]
default = []
gui = ["dep:tray-icon", "dep:tao", "dep:ico", "dep:rfd"]

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[[bin]]
name = "betfair_stream_proxy_gui"
path = "src/bin/betfair_stream_proxy_gui.rs"
required-features = ["gui"]
