
[package]
name = "betfair_stream_app"
version = "1.0.14"
edition = "2021"

[package.metadata.app]
display_name = "Betfair Stream API App"
bundle_id = "com.savostin.betfair-stream-app"
dmg_volume_name = "Betfair Stream API App"
windows_product_name = "Betfair Stream API App"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net"] }
urlencoding = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pki-types = "1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures-util = { version = "0.3", features = ["sink"] }

tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
