[package]
name = "betfair_stream_proxy_tauri"
version = "1.0.12"
edition = "2021"

[build-dependencies]
tauri-build = "2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net"] }
urlencoding = "2"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"
rustls-pki-types = "1"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures-util = "0.3"

betfair_stream_proxy = { path = ".." }

tauri = { version = "2" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
